k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planner-service
spec:
  selector:
    app: planner
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
